; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dtc/extr_fdtput.c__realloc_fdt.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dtc/extr_fdtput.c__realloc_fdt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @_realloc_fdt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @_realloc_fdt(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @fdt_totalsize(i8* %6)
  %8 = load i32, i32* %4, align 4
  %9 = add nsw i32 %7, %8
  store i32 %9, i32* %5, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i8* @xrealloc(i8* %10, i32 %11)
  store i8* %12, i8** %3, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @fdt_open_into(i8* %13, i8* %14, i32 %15)
  %17 = load i8*, i8** %3, align 8
  ret i8* %17
}

declare dso_local i32 @fdt_totalsize(i8*) #1

declare dso_local i8* @xrealloc(i8*, i32) #1

declare dso_local i32 @fdt_open_into(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
